--- a/css/styles.css
+++ b/css/styles.css
@@ -10,20 +10,20 @@
   
   /* Header/logo Title */
   .header {
-    padding: 80px;
+    padding: 75px;
     text-align: center;
-    background: #1abc9c;
+    background: #1a7563;
     color: white;
   }
   
   /* Increase the font size of the heading */
   .header h1 {
-    font-size: 40px;
+    font-size: 50px; /* font size van uw hoofdtitel*/
   }
   
   /* Style the top navigation bar */
   .navbar {
-    overflow: hidden;
+    overflow: auto;
     background-color: #333;
     position: fixed; /* Set the navbar to fixed position */
     width: 100%;
@@ -35,7 +35,7 @@
     display: block;
     color: white;
     text-align: center;
-    padding: 14px 20px;
+    padding: 20px 20px;
     text-decoration: none;
 
   }
@@ -71,7 +71,7 @@
   .side {
     -ms-flex: 30%; /* IE10 */
     flex: 30%;
-    background-color: #f1f1f1;
+    background-color: #ffffff; /*kaderkleur van profielfoto - zijkant*/
     padding: 20px;
   }
   
@@ -79,15 +79,17 @@
   .main {   
     -ms-flex: 70%; /* IE10 */
     flex: 70%;
-    background-color: white;
+    background-color: rgb(209, 216, 216);
     padding: 20px;
   }
   
   /* Fake image, just for this example */
   .fakeimg {
-    background-color: #aaa;
+    background-color: #773a3a; /*kaderkleur rond uw foto*/
     width: 100%;
-    padding: 20px;
+    padding: 0px;
+    object-fit: cover;
+    object-position: center center;
   }
   
   /* Footer */
