--- a/css/styles.css
+++ b/css/styles.css
@@ -7,27 +7,69 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
   }
-  
+ *:before, *:after {
+    box-sizing: inherit;
+}
+.top {
+  top: 0;
+  overflow: hidden;
+  background-color: #333;
+  position: absolute; /* Set the navbar to fixed position */
+  width: 100%;
+  z-index: 1;
+
+}
+.nav{
+  width: 100%;
+  overflow: hidden;
+} 
+.navitem {
+    padding: 7px 15px;
+    float: left;
+    width: auto;
+    border: none;
+    display: block;
+    outline: 0;
+    color: rgb(255, 255, 255);
+    text-align: center;
+    font-weight: bold;
+    text-decoration: none;
+
+}
   /* Header/logo Title */
   .header {
-    padding: 75px;
-    text-align: center;
-    background: #1a7563;
-    color: white;
+  padding:230px;
+  background-image: url(/img/Headerimage.jpg);
+  min-height: 100%;
+  text-align: center;
+  color: rgb(91, 154, 173);
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   }
-  
+
+  .header-display-container
+  {
+    position: relative;
+  }
+  .headeropacity-min
+  {
+    position: 0.75;
+  }
   /* Increase the font size of the heading */
   .header h1 {
-    font-size: 50px; /* font size van uw hoofdtitel*/
+    font-size: 45px; /* font size van uw hoofdtitel*/
+  }
+  .header h2 {
+    font-size: 20px;
+    font-style: italic;
+    font-weight:normal;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
   
   /* Style the top navigation bar */
-  .navbar {
-    overflow: auto;
-    background-color: #333;
-    position: fixed; /* Set the navbar to fixed position */
-    width: 100%;
-  }
+
   
   /* Style the navigation bar links */
   .navbar a {
@@ -35,7 +77,7 @@
     display: block;
     color: white;
     text-align: center;
-    padding: 20px 20px;
+    padding: 8px 10px;
     text-decoration: none;
 
   }
@@ -69,12 +111,27 @@
   /* Create two unequal columns that sits next to each other */
   /* Sidebar/left column */
   .side {
-    -ms-flex: 30%; /* IE10 */
-    flex: 30%;
-    background-color: #ffffff; /*kaderkleur van profielfoto - zijkant*/
-    padding: 20px;
+    -ms-flex: 25%; /* IE10 */
+    flex: 20%;
+    width:20%;
+    background-color: #e7ecf1; /*kaderkleur van profielfoto - zijkant*/
+    padding: 30px;
   }
   
+  ul{
+    display: block;
+    list-style-type: disc;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px
+  }
+
+  li {
+    display: list-item;
+    text-align: -webkit-match-parent;
+}
   /* Main column */
   .main {   
     -ms-flex: 70%; /* IE10 */
@@ -84,10 +141,25 @@
   }
   
   /* Fake image, just for this example */
+  .portretimg {
+    width: 100%;
+    padding: 0px;
+    border-radius: 25px;
+    object-fit: cover;
+    object-position: center center;
+  }
   .fakeimg {
     background-color: #773a3a; /*kaderkleur rond uw foto*/
     width: 100%;
     padding: 0px;
+    border-radius: 5px;
+    object-fit: cover;
+    object-position: center center;
+  }
+  .icons {
+    background-color:  #773a3a; /*verander naar transparant achteraf*/
+    width: 30px;
+    height: 30px;
     object-fit: cover;
     object-position: center center;
   }
