--- a/css/styles.css
+++ b/css/styles.css
@@ -8,9 +8,6 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
   }
- *:before, *:after {
-    box-sizing: inherit;
-}
 .top {
   top: 0;
   overflow: hidden;
@@ -102,6 +99,9 @@
     display: flex;
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
+  }
+  .p1{
+    text-align: justify;
   }
   
   /* Create two unequal columns that sits next to each other */
