--- a/css/homepage.css
+++ b/css/homepage.css
@@ -12,7 +12,7 @@ body {
 .header {
     padding: 200px;
     text-align: left;
-    background-image: url(/imag/Headerimage.jpg);
+    background-image: url(/img/Headerimage.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
     height: 100vh;  
@@ -123,7 +123,7 @@ div>span{
   -ms-flex: 40%; /* IE10 */
   flex: 40%;  
   padding-top: 30vh;
-  background-image: url(/imag/ZP.png);
+  background-image: url(/img/ZP.png);
   background-origin:content-box; 
   background-repeat: no-repeat;
   background-size: cover;
